# wiringPi

./: Makefile.am  README.md  configure.ac
PACKAGE/: Config.in  wiringPi.mk
gpio/: Makefile.am
wiringPi/: Makefile.am
