#noinst_LTLIBRARIES=libwiringPi.la
lib_LTLIBRARIES=libwiringPi.la
libwiringPi_la_SOURCES= drcSerial.c mcp23s08.c pcf8574.c softServo.c wiringSerial.c max31855.c mcp23s17.c pcf8591.c softTone.c wiringShift.c max5322.c mcp3002.c piHiPri.c sr595.c wpiExtensions.c mcp23008.c mcp3004.c piThread.c wiringPi.c mcp23016.c mcp3422.c sn3218.c wiringPiI2C.c mcp23017.c mcp4802.c softPwm.c wiringPiSPI.c
otherincludedir = $(includedir)/wiringPi
otherinclude_HEADERS = drcSerial.h max5322.h mcp23016.h mcp23017.h mcp23s17.h mcp23x08.h mcp3004.h mcp4802.h pcf8591.h softPwm.h softTone.h wiringPi.h wiringPiSPI.h wiringShift.h max31855.h mcp23008.h mcp23016reg.h mcp23s08.h mcp23x0817.h mcp3002.h mcp3422.h pcf8574.h sn3218.h softServo.h sr595.h wiringPiI2C.h wiringSerial.h wpiExtensions.h
